Fixed letters being squashed when bold

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -161,6 +161,10 @@ section {
 				font-size: 1.5em;
 			}
 		}
+
+		strong{
+			letter-spacing: 0.06em;
+		}
 	}
 }
 
